public/less: fix layout misalignment in Firefox for Linux (#5317)
* Update _repository.less

* Update _repository.less

--- a/public/less/_repository.less
+++ b/public/less/_repository.less
@@ -128,11 +128,13 @@
 	#clone-panel {
 		margin-top: -8px;
 		margin-left: 5px;
-		width: 350px;
+		width: auto;
 
 		input {
 			border-radius: 0;
 			padding: 5px 10px;
+			max-width: 190px;
+			width: 190px;
 		}
 
 		.clone.button {
